gap fix

--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -1,7 +1,7 @@
 $blue: #00acdc;
 $card-width: 200px;
 $card-border-radius: 5px;
-$catalog-gap: 44px;
+$catalog-gap: 48px;
 $catalog-width: ($card-width*4) + ($catalog-gap*3);
 $star-size: 15px;
 $logo-size: 40px;
